# sanctioned-securities-trading-radar

./: .gitignore  README.md  pyproject.toml
docs/: REAL-FINDINGS.md
docs/superpowers/plans/: 2026-06-02-feasibility-spike.md
docs/superpowers/specs/: 2026-06-02-sanctioned-securities-trading-radar-design.md
results/: candidates_final.csv  candidates_us_typed.csv  indirect_candidates.csv  report_final.md  step3_finra_recon.md
scripts/: analyze_flags.py  analyze_real.py  final_consolidate.py  inspect_securities.py  real_report.py  step1_openfigi.py  step2_explore.py  step2_traverse.py
src/radar/: run.py  stage1_ingest.py  stage2_ownership.py  stage3_classify.py  stage4_activity.py  stage5_report.py
src/radar/common/: http.py  ids.py  log.py  schemas.py
tests/: test_http.py  test_ids.py  test_run_sample.py  test_stage1_ingest.py  test_stage2_ownership.py  test_stage3_classify.py  test_stage4_activity.py  test_stage5_report.py
tests/fixtures/: finra_recon_sample.json  gleif_isin_lei.csv  gleif_rr.csv  openfigi_response.json  opensanctions_entities.ftm.json  opensanctions_securities.ftm.json
